# cfr-database

./: Cargo.toml  database_schema.json  input.database.jsonc  input.jsonc  readme.md  regulation_schema.json  regulations.db
src/: lib.rs  structs.rs
