[package]
name = "cfr-database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database_utils"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11.0"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
regex = "1.11.1"